--- a/front-end/src/index.html
+++ b/front-end/src/index.html
@@ -1,6 +1,6 @@
 <head>
   <meta charset="utf-8">
-  <title>NCIIPC</title>
+  <title>NPTHRS</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
